---
source: crates/as2_pcode/src/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/special_functions.pcode
---
Ok:
  actions:
    - ConstantPool:
        - x
        - foo
        - newname
        - this
        - getNextHighestDepth
        - "http://ruffle.rs"
        - window
        - "/:$version"
        - url
        - target
        - _level12
        - _level
        - abc
        - "print:#bmax"
        - "print:#bframe"
        - "print:"
        - _root
        - "printasbitmap:#bmax"
        - "printasbitmap:#bframe"
        - "printasbitmap:"
        - _level123
        - message
        - ""
    - Push:
        - Integer: 123
    - Call
    - Push:
        - Constant: 0
    - GetVariable
    - AsciiToChar
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - GetVariable
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - Pop
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - Push:
        - Integer: 16384
    - Push:
        - Integer: 0
    - Push:
        - Constant: 3
    - GetVariable
    - Push:
        - Constant: 4
    - CallMethod
    - Add2
    - CloneSprite
    - GetTime
    - Pop
    - GetUrl:
        url: "http://ruffle.rs"
        target: ""
    - GetUrl:
        url: "http://ruffle.rs"
        target: window
    - Push:
        - Constant: 5
    - Push:
        - Constant: 6
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 1
    - Push:
        - Constant: 7
    - GetVariable
    - Pop
    - GotoFrame: 122
    - Play
    - GotoLabel: "123"
    - Play
    - Push:
        - Constant: 0
    - GetVariable
    - GotoFrame2:
        scene_bias: 0
        play: true
    - GotoFrame: 122
    - Play
    - GotoLabel: "123"
    - Play
    - Push:
        - Constant: 0
    - GetVariable
    - GotoFrame2:
        scene_bias: 0
        play: true
    - Push:
        - Constant: 0
    - GetVariable
    - GotoFrame2:
        scene_bias: 0
        play: true
    - GotoFrame: 65535
    - Play
    - GotoFrame: 0
    - Play
    - GotoFrame: 1
    - Play
    - GotoFrame: 0
    - Play
    - GotoFrame: 122
    - GotoLabel: "123"
    - Push:
        - Constant: 0
    - GetVariable
    - GotoFrame2:
        scene_bias: 0
        play: false
    - GotoFrame: 122
    - GotoLabel: "123"
    - Push:
        - Constant: 0
    - GetVariable
    - GotoFrame2:
        scene_bias: 0
        play: false
    - Push:
        - Constant: 0
    - GetVariable
    - GotoFrame2:
        scene_bias: 0
        play: false
    - Push:
        - Constant: 0
    - GetVariable
    - ToInteger
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - StringLength
    - Pop
    - Push:
        - Constant: 8
    - Push:
        - Constant: 9
    - GetUrl2:
        load_variables: false
        load_target: true
        method: 0
    - Push:
        - Constant: 8
    - Push:
        - Constant: 9
    - GetUrl2:
        load_variables: false
        load_target: true
        method: 1
    - GetUrl:
        url: url
        target: _level12
    - Push:
        - Constant: 8
    - Push:
        - Constant: 10
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 1
    - Push:
        - Constant: 8
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - StringAdd
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 1
    - Push:
        - Constant: 8
    - Push:
        - Constant: 9
    - GetUrl2:
        load_variables: true
        load_target: true
        method: 0
    - Push:
        - Constant: 8
    - Push:
        - Constant: 0
    - GetVariable
    - GetUrl2:
        load_variables: true
        load_target: true
        method: 0
    - Push:
        - Constant: 8
    - Push:
        - Constant: 9
    - GetUrl2:
        load_variables: true
        load_target: true
        method: 1
    - Push:
        - Constant: 8
    - Push:
        - Constant: 10
    - GetUrl2:
        load_variables: true
        load_target: false
        method: 0
    - Push:
        - Constant: 8
    - Push:
        - Constant: 10
    - GetUrl2:
        load_variables: true
        load_target: false
        method: 1
    - Push:
        - Constant: 8
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - StringAdd
    - GetUrl2:
        load_variables: true
        load_target: false
        method: 1
    - Push:
        - Constant: 0
    - GetVariable
    - MBAsciiToChar
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - MBStringLength
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - MBCharToAscii
    - Pop
    - Push:
        - Constant: 12
    - Push:
        - Integer: 1
    - Push:
        - Integer: -1
    - MBStringExtract
    - Pop
    - Push:
        - Constant: 12
    - Push:
        - Integer: 1
    - Push:
        - Integer: 2
    - MBStringExtract
    - Pop
    - NextFrame
    - GotoFrame: 0
    - Push:
        - Constant: 0
    - GetVariable
    - ToNumber
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - CharToAscii
    - Pop
    - Play
    - PrevFrame
    - GotoFrame: 0
    - Push:
        - Constant: 13
    - Push:
        - Constant: 1
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 14
    - Push:
        - Constant: 3
    - GetVariable
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 15
    - Push:
        - Constant: 16
    - GetVariable
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 17
    - Push:
        - Constant: 1
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 18
    - Push:
        - Constant: 3
    - GetVariable
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 19
    - Push:
        - Constant: 16
    - GetVariable
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 17
    - Push:
        - Constant: 20
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 18
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - StringAdd
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 19
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - StringAdd
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 13
    - Push:
        - Constant: 20
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 14
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - StringAdd
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Constant: 15
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - StringAdd
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - Push:
        - Integer: 123
    - RandomNumber
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - RemoveSprite
    - Push:
        - Integer: 0
    - Push:
        - Integer: 0
    - Push:
        - Constant: 0
    - GetVariable
    - StartDrag
    - Push:
        - Integer: 0
    - Push:
        - Integer: 1
    - Push:
        - Constant: 0
    - GetVariable
    - StartDrag
    - Push:
        - Integer: 0
    - Push:
        - Integer: 0
    - Push:
        - Constant: 0
    - GetVariable
    - StartDrag
    - Push:
        - Integer: 1
    - Push:
        - Integer: 2
    - Push:
        - Integer: 3
    - Push:
        - Integer: 4
    - Push:
        - Integer: 1
    - Push:
        - Integer: 1
    - Push:
        - Constant: 0
    - GetVariable
    - StartDrag
    - Stop
    - StopSounds
    - EndDrag
    - Push:
        - Constant: 0
    - GetVariable
    - ToString
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 1
    - Push:
        - Integer: -1
    - StringExtract
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 1
    - Push:
        - Integer: 2
    - StringExtract
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - TargetPath
    - Pop
    - ToggleQuality
    - Push:
        - Constant: 21
    - Trace
    - Push:
        - Constant: 22
    - Push:
        - Constant: 0
    - GetVariable
    - GetUrl2:
        load_variables: false
        load_target: true
        method: 0
    - Push:
        - Constant: 22
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - StringAdd
    - GetUrl2:
        load_variables: false
        load_target: false
        method: 0
    - GetUrl:
        url: ""
        target: _level123
  label_positions: {}
